# hirix

./: .env  .env.example  .gitignore  Gemini.md  README.md  architecture.html  hirix_backend_architecture.md  index.html  package-lock.json  package.json  payload.json  render.yaml  vite.config.js
hirix-backend/: .env.example  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
hirix-backend/app/: config.py  database.py  dependencies.py  main.py
hirix-backend/app/api/v1/: auth.py  feedback.py  jobs.py  matching.py
hirix-backend/app/api/v1/jd/: jobs.py
hirix-backend/app/api/v1/resume/: candidates.py
hirix-backend/app/brain/d972713f-da82-45a4-97b5-139dd289141c/scratch/: check_resumes.py
hirix-backend/app/layer2_adapters/ai/: embedding_service.py
hirix-backend/app/layer2_adapters/ai/jd/: jd_analyzer.py
hirix-backend/app/layer2_adapters/auth/: google_auth_adapter.py
hirix-backend/app/layer2_adapters/files/: docx_parser.py  pdf_parser.py
hirix-backend/app/layer3_ports/: auth_port.py
hirix-backend/app/layer4_application/auth/: __init__.py  google_login.py  login.py  signup.py
hirix-backend/app/layer4_application/jobs/: create_job.py
hirix-backend/app/layer4_application/matching/: fetch_and_align.py
hirix-backend/app/layer4_application/resume/: parse_resume.py
hirix-backend/app/layer5_domain/entities/: job.py  user.py
hirix-backend/app/layer5_domain/repositories/: job_repository.py  user_repository.py
hirix-backend/app/layer6_data/models/: __init__.py  agent_model.py  ai_decision_model.py  application_model.py  audit_log_model.py  candidate_model.py  company_model.py  employee_model.py  evaluation_model.py  feedback_model.py  interview_model.py  job_model.py  memory_model.py  notification_model.py  search_model.py  token_model.py  user_model.py
hirix-backend/app/layer6_data/repositories_impl/: postgres_job_repo.py  postgres_memory_repo.py  postgres_user_repo.py
hirix-backend/app/layer7_crosscutting/: auth.py  security.py
hirix-backend/app/layer7_crosscutting/ai/: resilience.py
hirix-backend/app/layer7_crosscutting/jd/: skill_ontology.py  text_processor.py
hirix-backend/app/layer7_crosscutting/resume/: seniority_enricher.py
hirix-backend/app/schemas/: auth_schemas.py  job_schemas.py
hirix-backend/app/schemas/jd/: job_schemas.py
hirix-backend/app/scripts/: create_tables.py  reset_db.py  seed_db.py  sync_schema.py
hirix-backend/artifacts/: agentic_ai_engineer_context.md  agentic_ai_roadmap.md  frontend_api_integration_guide.md  hirix_agentic_master_analysis.md
src/: App.jsx  index.jsx
src/lib/: api.js  (+5 more)
(+150 files in other folders)
