[project]
name = "hirix-backend"
version = "0.1.0"
description = "AI-Driven Recruitment Platform Backend"
authors = [
    { name = "Hirix Team", email = "engineering@hirix.ai" }
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.2.1",
    "langgraph>=0.0.30",
    "langchain>=0.1.13",
    "langchain-openai>=0.1.1",
    "langchain-anthropic>=0.1.4",
    "sqlalchemy[asyncio]>=2.0.28",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "redis>=5.0.3",
    "confluent-kafka>=2.3.0",
    "pinecone-client>=3.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "structlog>=24.1.0",
    "opentelemetry-api>=1.23.0",
    "opentelemetry-sdk>=1.23.0",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.3.4",
    "mypy>=1.9.0",
    "black>=24.3.0",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
